# runestone

./: .envrc.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  install-claude-code.sh  install.sh  rustfmt.toml
.claude/hooks/: README.md  session_end.sh  session_start.sh  stop.sh  user_prompt_submit.sh
.claude/hooks_old/: README.md  session_end.sh  session_start.sh  stop.sh  user_prompt_submit.sh
.claude/skills/rune/: SKILL.md
.claude/skills/submit-changes/: SKILL.md
.claude/skills/sync-memory/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/runestone/: Cargo.toml
crates/runestone-cli/: Cargo.toml
crates/runestone-cli/src/: main.rs
crates/runestone/src/: extractor.rs  git_repo.rs  index.rs  lib.rs  retriever.rs  session.rs
crates/runestone/src/memory/: case.rs  change.rs  event.rs  mod.rs  preference.rs  profile.rs  scope.rs
crates/runestone/tests/: extractor_integration.rs  integration.rs
doc/: COMPARISON.md  DESIGN.md  INTEGRATION.md  README.md  ROADMAP.md  TUTORIAL.md
src/: error.rs  git_repo.rs  lib.rs  main.rs  memory.rs  session.rs
src/memory/: entity.rs
