[package]
name = "runestone"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "runestone"
path = "src/bin/runestone.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.21"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = "0.4"
exn = "0.3.1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.13.4", features = ["json"] }
async-trait = "0.1.89"
rig = "0.38.2"
