[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.96"
repository = "https://github.com/lagudomeze/runestone"
authors = ["lagudomeze"]

[workspace.dependencies]
runestone = { path = "crates/runestone" }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
exn = "0.3.1"
git2 = "0.21"
rig = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
