[package]
name = "runestone"
description = "Personal AI memory system based on Rust + Git — library"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["ai", "memory", "llm", "git", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono.workspace = true
exn.workspace = true
git2.workspace = true
rig.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
